--- a/static/scss/_calculator.scss
+++ b/static/scss/_calculator.scss
@@ -1,6 +1,6 @@
 .calculator {
     background-color: #EBECEC;
-
+    padding-bottom: 40px;
     .blue__title {
         padding-top: 150px;
         padding-bottom: 30px;
