--- a/static/scss/_auto_card.scss
+++ b/static/scss/_auto_card.scss
@@ -1,3 +1,111 @@
 .auto_card {
+    background-color: #FEFEFE;
+    padding-bottom: 80px;
+}
+.auto-card-block {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.auto-card-prof {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    cursor: default;
+    min-width: 355px;
+    width: 25%;
+    background-color: #fff;
+    margin-top: 50px;
+    margin-right: 25px;
+    -webkit-box-shadow: 0px 0px 18px -8px rgba(135,135,135,1);
+-moz-box-shadow: 0px 0px 18px -8px rgba(135,135,135,1);
+box-shadow: 0px 0px 18px -8px rgba(135,135,135,1);
+border-bottom-left-radius: 10px;
+border-bottom-right-radius: 10px;
+}
+.name_car {
+    text-align: center;
+    line-height: 1;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 700;
+    color: #727271;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.price_car {
+    color: #B1413F;
+    text-align: center;
+    line-height: 1;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.characteristic_car {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.char-prof {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    img {
+        text-align: center;
+    }
+}
+.char-text {
+    color: #727271;
+    font-size: 15px;
+    font-weight: 700;
+    text-align: center;
+    margin-top: 8px;
+}
+.btn_car {
+    display: block;
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 25px 0;
+    background-color: #B1413F;
+    list-style: none;
+    text-decoration: none;
+    border-radius: 10px;
+    margin-top: 20px;
+    font-weight: 700;
+
+}
+.photo_auto {
+    width: 100%;
+}
+.more_slide_car {
+    border-radius: 10px;
+    border: 2px solid #B1413F;
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    width: 280px;
+    margin: 0 auto;
+    padding: 20px 35px;
+    margin-top: 60px;
+    margin-bottom: 80px;
+    cursor: pointer;
+    img {
+        margin-right: 15px;
+    }
+}
+.re-text {
+    font-weight: 700;
+    font-size: 20px;
+    text-transform: uppercase;
+    color: #B1413F;
     
+
 }
