--- a/static/scss/_calculator.scss
+++ b/static/scss/_calculator.scss
@@ -86,6 +86,7 @@
     background-color: #B1413F;
     color: #fff;
     padding: 15px 100px;
+    cursor: pointer;
     margin-top: 30px;
     border-radius: 10px;
     width: 100%;
