--- a/static/scss/_etaps.scss
+++ b/static/scss/_etaps.scss
@@ -87,6 +87,9 @@ cursor: pointer;
     position: absolute;
     top: 46px;
     right: 20px;
+
+        width: 25px;
+    
 }
 .etaps-prichka_active {
     transform: rotate(180deg);
@@ -100,17 +103,6 @@ cursor: pointer;
     margin-right: 20px;
     width: 30%;
 }
-.formA {
-
-}
-.inp-vak-wrap {
-    display: flex;
-    flex-direction: column;
-
-}
-.label__style {
-    padding: 5px;
-}
 .inp-vak-wrap {
     input {
         padding: 5px;
@@ -119,12 +111,48 @@ cursor: pointer;
         border: 1px solid #00000096;
     }
 }
+.formA {
+    min-height: 400px;
+    border-radius: 10px;
+    width: 470px;
+
+    label {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        font-size: 20px;
+    }
+    input {
+        padding: 10px;
+        font-size: 20px;
+        border-radius: 10px;
+    
+    }
+
+
+
+
+
+
+
+
+  }
+.inp-vak-wrap {
+    display: flex;
+    flex-direction: column;
+
+}
+.label__style {
+    padding: 5px;
+}
+
 .submit_vak {
     border: none;
     outline: none;
     background-color: #00000096;
     color: #fff;
-    padding: 7px 50px;
+    padding: 15px 70px !important;
+    margin-top: 25px;
+    cursor: pointer;
 }
 .inp-cons-wrap {
     position: relative;
@@ -190,6 +218,7 @@ box-shadow: 0px 0px 22px -3px rgba(173,173,173,1);
     position: relative;
     font-weight: 700;
     font-weight: 700;
+    border-radius: 10px;
     bottom: -23px;
     
 }
@@ -211,6 +240,15 @@ box-shadow: 0px 0px 22px -3px rgba(173,173,173,1);
     border: 2px dotted #B1413F;
     
 }   
+.etaps_fixed {
+    opacity: 0;
+}
+.abs_fixed {
+    top: 17px;
+    img {
+        width: 66px;
+    }
+}
 .text-block-for-post {
     display: flex;
     flex-direction: column;
@@ -264,6 +302,7 @@ box-shadow: 0px 0px 32px 0px rgba(125,120,125,1);
     color: #fff;
     padding: 20px 110px;
    position: absolute;
+   border-radius: 10px;
    left: 77px;
    font-weight: 700;
    cursor: pointer;
@@ -322,6 +361,12 @@ box-shadow: 0px 0px 32px 0px rgba(125,120,125,1);
         right: unset;
     }
 }
+@media (max-width: 1088px) {
+    .formA {
+        width: 55%;
+    }
+}
+
 @media (max-width: 909px) {
     .main_cons_wrap {
         flex-direction: column;
@@ -343,6 +388,11 @@ box-shadow: 0px 0px 32px 0px rgba(125,120,125,1);
     }
     .border_fix {
         width: 100%;
+    }
+}
+@media (max-width: 720px) {
+    .formA {
+        width: 85%;
     }
 }
 
@@ -377,6 +427,23 @@ box-shadow: 0px 0px 32px 0px rgba(125,120,125,1);
         padding-bottom: 20px;
     }
 }
+@media (max-width: 474px) {
+    .formA {
+        width: 80%;
+        min-height: unset;
+    }
+    .formA label {
+        font-size: 15px;
+    }
+    .formA input {
+        padding: 8px;
+        font-size: 15px;
+    }
+    .submit_vak {
+        padding: 10px 45px !important;
+    }    
+}
+
 @media (max-width: 457px) {
     .etaps-prof {
         padding: 15px;
