--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900&display=swap&subset=cyrillic');
 @import 'nav-bar';
+@import 'fonts';
 @import 'header';
 @import 'etaps';
 @import 'calculator';
