--- a/static/scss/_nav-bar.scss
+++ b/static/scss/_nav-bar.scss
@@ -3,12 +3,28 @@
     z-index: 999;
     width: 100%;
     min-height: 100px;
-    background-color: #0c0c0cbf;
+    background-color: #0c0c0cd9;;
     display: flex;
     color: #FEFEFE;
     align-items: center;
 }
 
+
+.bottom-info-data {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+
+}
+
+
+
+
+
+.hidden_infa {
+    display: none !important;
+}
 .nav-container {
     display: flex;
     color: #FEFEFE;
@@ -44,6 +60,11 @@
     cursor: pointer;
     
 }
+.nav_block {
+    a {
+        text-decoration: none;
+    }
+} 
 .nav-login {
     display: flex;
     align-items: center;
@@ -274,10 +295,12 @@
     }
     .right_nav-bar {
         top: 65px;
-        width: 100vw;
+        width: 50vw;
         position: absolute;
         right: -100%;
-        height: 10000px;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
         background: #000000c9;
         transition: all .4s;
     }
@@ -293,13 +316,50 @@
         display: flex;
         width: 100vw;
         margin: 0 auto;
+            top: 0;
+        left: 0;
+        height: 400px;
+        width: 300px;
+        z-index: 99999;
+        content: '';
+
+
+        a {
+            width: 100%;
+            text-align: center;
+            margin: 15px 0;
+        }
+    }
+    .main-hvr {
+       
+       
+    }
+    .main-hvr:before {
+        top: 15px !important;
     }
     .nav__link {
         margin-left: 0;
-        margin-top: 70px;
+       padding: 15px 0;
     }
     .lang-block {
         margin-right: 50px;
+    }
+    .hidden_infa {
+        display: flex !important;
+        border: none !important;
+
+        .adress-text {
+            color: #FEFEFE !important;
+            font-weight: 400 !important;
+        }
+    }
+    .hidden_infa_1 {
+        margin-top: 30px;
+    }
+}
+@media (max-width: 621px) {
+    .right_nav-bar {
+        width: 100vw;
     }
 }
 @media (max-width: 503px) {
