--- a/static/scss/_auto_card.scss
+++ b/static/scss/_auto_card.scss
@@ -25,12 +25,15 @@
 box-shadow: 0px 0px 18px -8px rgba(135,135,135,1);
 border-bottom-left-radius: 10px;
 border-bottom-right-radius: 10px;
-    transition: transform .3s;
-
-    &:hover {
-        transform: scale(1.05);
-    }
+transform: scale(1);
+transition: .3s;
+&:hover {
+    transform: scale(1.05);
+    transition: .3s;
 }
+
+}
+
 .name_car {
     text-align: center;
     line-height: 1;
